assignment nb partially done

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -2,172 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# standard imports\n",
+    "import os\n",
+    "import glob\n",
+    "import pprint\n",
+    "import pandas as pd\n",
+    "import functools\n",
+    "\n",
+    "# local imports\n",
     "import data_handler"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = data_handler.read_as_dataframe()"
+    "files_list = list(glob.glob('data/*.csv.bz2'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_list = glob.glob('data/*.csv.bz2')"
+    "df = pd.read_csv(files_list[3], compression='bz2', encoding='utf-8', engine='c', low_memory=True, memory_map=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(files_list[0], compression='bz2', encoding='ISO-8859-1', low_memory=False, memory_map=True)"
+    "par_func = functools.partial(\n",
+    "    pd.read_csv, compression='bz2', engine='c', low_memory=True)\n",
+    "file_list = glob.glob(os.path.join('data', '*.csv.bz2'))\n",
+    "df = pd.concat(map(par_func, file_list[:5]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7009728, 29)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "'rows: {:,}, columns: {} ; {} Mb'.format(*df.shape, round(df.memory_usage().sum() / 1e+6,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>DayofMonth</th>\n",
-       "      <th>DayOfWeek</th>\n",
-       "      <th>DepTime</th>\n",
-       "      <th>CRSDepTime</th>\n",
-       "      <th>ArrTime</th>\n",
-       "      <th>CRSArrTime</th>\n",
-       "      <th>UniqueCarrier</th>\n",
-       "      <th>FlightNum</th>\n",
-       "      <th>...</th>\n",
-       "      <th>TaxiIn</th>\n",
-       "      <th>TaxiOut</th>\n",
-       "      <th>Cancelled</th>\n",
-       "      <th>CancellationCode</th>\n",
-       "      <th>Diverted</th>\n",
-       "      <th>CarrierDelay</th>\n",
-       "      <th>WeatherDelay</th>\n",
-       "      <th>NASDelay</th>\n",
-       "      <th>SecurityDelay</th>\n",
-       "      <th>LateAircraftDelay</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5698957</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>10</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1801.0</td>\n",
-       "      <td>1805</td>\n",
-       "      <td>1914.0</td>\n",
-       "      <td>1913</td>\n",
-       "      <td>EV</td>\n",
-       "      <td>5560</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 29 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Year  Month  DayofMonth  DayOfWeek  DepTime  CRSDepTime  ArrTime  \\\n",
-       "5698957  2008     10          16          4   1801.0        1805   1914.0   \n",
-       "\n",
-       "         CRSArrTime UniqueCarrier  FlightNum  ... TaxiIn  TaxiOut  Cancelled  \\\n",
-       "5698957        1913            EV       5560  ...    4.0     19.0          0   \n",
-       "\n",
-       "         CancellationCode  Diverted  CarrierDelay WeatherDelay NASDelay  \\\n",
-       "5698957               NaN         0           NaN          NaN      NaN   \n",
-       "\n",
-       "         SecurityDelay  LateAircraftDelay  \n",
-       "5698957            NaN                NaN  \n",
-       "\n",
-       "[1 rows x 29 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.sample()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Counting Number of Flights for Each Carrier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 1: Count Each By One"
    ]
   },
   {
@@ -175,12 +107,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# all carriers in this dataset\n",
+    "carriers = df.UniqueCarrier.unique()\n",
+    "carriers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inital value dictionary\n",
+    "carrier_counts = {}\n",
+    "\n",
+    "# update the global carrier_count\n",
+    "for key in carriers:\n",
+    "    if key not in carrier_counts:\n",
+    "        carrier_counts.update({key: 0})\n",
+    "\n",
+    "# loop through each row in dataframe \n",
+    "for carrier in df.UniqueCarrier:\n",
+    "    carrier_counts[carrier] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show the results\n",
+    "pprint.pprint(carrier_counts, indent=2, compact=True, sort_dicts=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 2: MapReduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code starts here!"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Asssignment3",
+   "display_name": "Assignment3",
    "language": "python",
    "name": "assignment3"
   },
@@ -194,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
