--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -1,19 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assignment 3 - Counting with MapReduce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# standard imports\n",
-    "import os\n",
-    "import glob\n",
-    "import pprint\n",
-    "import pandas as pd\n",
-    "import functools\n",
+    "# system\n",
+    "import collections\n",
     "\n",
     "# local imports\n",
+    "import utils\n",
     "import data_handler"
    ]
   },
@@ -21,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the Dataframe"
+    "## Load Dataset"
    ]
   },
   {
@@ -30,28 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_list = list(glob.glob('data/*.csv.bz2'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(files_list[3], compression='bz2', encoding='utf-8', engine='c', low_memory=True, memory_map=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "par_func = functools.partial(\n",
-    "    pd.read_csv, compression='bz2', engine='c', low_memory=True)\n",
-    "file_list = glob.glob(os.path.join('data', '*.csv.bz2'))\n",
-    "df = pd.concat(map(par_func, file_list[:5]))"
+    "%%time\n",
+    "\n",
+    "df = data_handler.read_as_dataframe(num_of_files=2)"
    ]
   },
   {
@@ -67,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# shape of data and approx. memory usage\n",
     "'rows: {:,}, columns: {} ; {} Mb'.format(*df.shape, round(df.memory_usage().sum() / 1e+6,2))"
    ]
   },
@@ -76,7 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.shape"
+    "%%time\n",
+    "\n",
+    "# actual memory usage\n",
+    "df.info(verbose=False, memory_usage=\"deep\")"
    ]
   },
   {
@@ -85,7 +81,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sample()"
+    "# first columns\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your eda goes here!"
    ]
   },
   {
@@ -108,45 +114,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all carriers in this dataset\n",
-    "carriers = df.UniqueCarrier.unique()\n",
-    "carriers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inital value dictionary\n",
-    "carrier_counts = {}\n",
+    "%%time\n",
     "\n",
-    "# update the global carrier_count\n",
-    "for key in carriers:\n",
-    "    if key not in carrier_counts:\n",
-    "        carrier_counts.update({key: 0})\n",
-    "\n",
-    "# loop through each row in dataframe \n",
-    "for carrier in df.UniqueCarrier:\n",
-    "    carrier_counts[carrier] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show the results\n",
-    "pprint.pprint(carrier_counts, indent=2, compact=True, sort_dicts=True)"
+    "# read from carrier counts from a single dataframe\n",
+    "carrier_counts = data_handler.count_num_of_fligts_per_carrier(df, verbose=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 2: MapReduce"
+    "### Method 2: Count With Chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = collections.Counter()\n",
+    "df_chunks_list = data_handler.read_as_dataframe_chunks(nu)\n",
+    "\n",
+    "# read from a dataframe chunks list\n",
+    "for df_chunk in utils.progressbar(df_chunks_list, prefix='Current File Chunks: '):\n",
+    "    for df in df_chunk:\n",
+    "        carrier_counts = data_handler.count_num_of_fligts_per_carrier(df)\n",
+    "        c.update(carrier_counts)\n",
+    "\n",
+    "# results\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 3: MapReduce"
    ]
   },
   {
@@ -156,6 +160,22 @@
    "outputs": [],
    "source": [
     "# your code starts here!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your conclusion here!"
    ]
   }
  ],
