fix on nb parameters

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -43,7 +43,8 @@
    "source": [
     "%%time\n",
     "\n",
-    "df = data_handler.read_as_dataframe(num_of_files=2)"
+    "# read it as a single dataframe\n",
+    "df = data_handler.read_as_dataframe(num_of_files=5)"
    ]
   },
   {
@@ -134,7 +135,7 @@
    "outputs": [],
    "source": [
     "c = collections.Counter()\n",
-    "df_chunks_list = data_handler.read_as_dataframe_chunks(nu)\n",
+    "df_chunks_list = data_handler.read_as_dataframe_chunks(num_of_files=5)\n",
     "\n",
     "# read from a dataframe chunks list\n",
     "for df_chunk in utils.progressbar(df_chunks_list, prefix='Current File Chunks: '):\n",
