assignment3 code is ready

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -134,11 +134,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "c = collections.Counter()\n",
-    "df_chunks_list = data_handler.read_as_dataframe_chunks(num_of_files=5)\n",
+    "df_chunks_list = data_handler.read_as_dataframe_chunks(num_of_files=22)\n",
     "\n",
     "# read from a dataframe chunks list\n",
-    "for df_chunk in utils.progressbar(df_chunks_list, prefix='Current File Chunks: '):\n",
+    "for df_chunk in utils.progressbar(df_chunks_list, prefix='Current File: '):\n",
+    "    # the chunks in current file\n",
     "    for df in df_chunk:\n",
     "        carrier_counts = data_handler.count_num_of_fligts_per_carrier(df)\n",
     "        c.update(carrier_counts)\n",
