--- a/Dask.ipynb
+++ b/Dask.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dask.distributed import Client\n",
     "import dask.dataframe as dd"
    ]
   },
@@ -15,8 +16,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dask.distributed import Client\n",
-    "client = Client(n_workers=2, threads_per_worker=8, processes=True, memory_limit='8GB')\n",
+    "client = Client() # n_workers=4, threads_per_worker=8, processes=False, memory_limit='2GB'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "client"
    ]
   },
@@ -26,7 +34,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.read_csv('data/raw_1987.csv.bz2', compression='bz2', dtype={'Distance': 'float64'}, blocksize=None)"
+    "dtype= {\n",
+    "    'CRSElapsedTime': 'float64',\n",
+    "    'CancellationCode': 'object',\n",
+    "    'TailNum': 'object',\n",
+    "    'Distance': 'float64'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dd.read_csv('data/raw_*.csv.bz2', compression='bz2', encoding='ISO-8859-1', dtype=dtype, blocksize=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape[0].compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape[0].compute(), df.shape[1].compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.set_index('timestamp')"
    ]
   },
   {
@@ -73,6 +140,13 @@
    "source": [
     "df.UniqueCarrier.unique().compute()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
