tasks added and intro

--- a/Dask.ipynb
+++ b/Dask.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.read_csv('data/raw_*.csv.bz2', compression='bz2', encoding='ISO-8859-1', dtype=dtype, blocksize=None)"
+    "df = dd.read_csv('data/raw_1987.csv.bz2', compression='bz2', encoding='ISO-8859-1', dtype=dtype, blocksize=None)"
    ]
   },
   {
@@ -67,6 +67,33 @@
    "outputs": [],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.DepDelay.max().compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('UniqueCarrier').FlightNum.apply(lambda x: x).compute()"
    ]
   },
   {
